Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88192

touch update delivery warnings

XMLWordPrintable

    • Linux/Yocto, Linux/Other display system
    • 2f71d9d837ad50428dc86ca80496b16b8140b2bf

      Running any Qt application using eglfs platform plugin causes warning to be displayed on every touch event:

      qt.pointer.dispatch: delivering touch update to same window QQuickView(0xffffcf142c28) not QWindow(0x0) 

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes